2010-10-23    <Jim@LS-RED>

	* CPU/inst.c, CPU/inst.h, CPU/mem.c, CPU/run.c,
	QtSpim/datatextedit.h, QtSpim/datawin.cpp, QtSpim/menu.cpp,
	QtSpim/spim_support.c, QtSpim/spimview.cpp, QtSpim/spimview.h,
	QtSpim/spimview.ui, QtSpim/textwin.cpp, QtSpm/windows_images.qrc:
	Fixed debugger functionality by adding pause button.
	Sped up formating of data segments.
	Improved error messages.

2010-10-10    <Jim@LS-RED>

	* CPU/run.c, QtSpim/QtSpim.pro, QtSpim/README, QtSpim/spim_support.c, QtSpim/textwin.cpp
	Chris Van Horne <cwvh@email.arizona.edu>:
	Changes for Mac.

	* xspim/xspim.c, xspim/buttons.c:
	New internal interface.

	* PCSpim/PCSpimView.cpp:
	New internal interface.

	* spim/spim.c:
	New internal interface.

	* QtSpim/menu.cpp, QtSpim/spimview.ui:
	Improved handling of run/stop/single-step.

	* CPU/spim-utils.c, CPU/spim-utils.h CPU/spim.h:
	Simplify code for running a program.

2010-10-02    <Jim@LS-RED>

	* QtSpim/menu.cpp (executeProgram) Alexander Williams <proflogic@gmail.com>:
	Single step go hung up at breakpoint.

2010-09-18    <Jim@LS-RED>

	* CPU/display-utils.c J.P. Mellor <jpmellor@rose-hulman.edu>:
	Did not display full stack (artificially dropped first 4K).

2010-09-12    <Jim@LS-RED>

	* QtSpim/:
	Released QtSpim.0.9

2010-09-09    <Jim@X64PC>

	* PCSpim/:
	Ported PCSpim to Visual Studio 2010.
	Renamed VS configuration files to reflect version of VS (vs6,
	vs08, vs10).
	Compiled PCSpim for x64 processor on Windows.

2010-09-06    <Jim@X64PC>

	* spim/Makefile:
	Supress coercion chatter when compiling with gcc v4.

2010-09-03    <Jim@LS-RED>

	* spim/, xspim/, CPU:
	Eliminated the Configure / configuration file. Defaults work for
	most systems these days, so ports to "unusual" systems can change
	the parameters by setting the cpp defines manually in Makefiles.

2010-08-31    <Jim@LS-RED>

	* pervasive:
	Renamed defines LITTLENDIAN -> SPIM_LITTLENDIAN, BIGENDIAN ->
	SPIM_BIGENDIAN to avoid name classes with system .h files.
